Fix bootstrap Fix fork awesome

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,14 @@
     <meta
       name="theme-color"
       content="#03A9F4">
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous" />
+
     <style type="text/css">
     html body {
       background-color: #03A9F4;
@@ -89,28 +97,25 @@
       }
     }
   </style>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css">
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Open+Sans"
+      rel="stylesheet"
+      type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css"
+      integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY="
+      crossorigin="anonymous"/>
 
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id={GA_PROJECTID}">
-    </script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-    window.GA_PROJECT_ID = '{GA_PROJECTID}';
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', window.GA_PROJECT_ID);
-    </script>
-    <meta
-      name="google-site-verification"
-      content="{GA_VERIFY_CODE}">
-    <link rel="manifest" href=".//manifest.json">
     <meta
       name="theme-color"
       content="#1976d2">
+
+
   </head>
 
   <body>
@@ -121,6 +126,29 @@
         <div class="double-bounce2"></div>
       </div>
     </section>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous">
+    </script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous">
+    </script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous">
+    </script>
+    <script
+      data-ad-client="ca-pub-2459752565912421"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+    </script>
   </body>
 
 </html>
