--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,28 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>YTPlayer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <meta charset="utf-8" />
+  <title>YTPlayer | PatoJAD</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    content='Youtube, YTPlayer, Musica, PatoJAD'
+    name='keywords' />
+  <meta name="author" content="PatoJAD" />
+  <meta
+  name="description"
+  content="YTPlayer es un reproductor online que nos permite escuchar musica desde youtube de una forma mas comoda"
+  property="og:description" />
+  <meta content='@PatoJADOficial' name='twitter:site'/>
+  <meta content='@PatoJADOficial' name='twitter:creator'/>
+  <meta property="og:url" content="https://ytplayer.patojad.com.ar/" />
+  <meta property="og:image" content="/favicon.ico" />
+  <meta property="og:locale" content="es-ES" />
+
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 
 <body>
