Fix preview Fix Home link

--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,26 @@
   name="description"
   content="YTPlayer es un reproductor online que nos permite escuchar musica desde youtube de una forma mas comoda"
   property="og:description" />
-  <meta content='@PatoJADOficial' name='twitter:site'/>
-  <meta content='@PatoJADOficial' name='twitter:creator'/>
-  <meta property="og:url" content="https://ytplayer.patojad.com.ar/" />
-  <meta property="og:image" content="/favicon.ico" />
-  <meta property="og:locale" content="es-ES" />
+  <meta
+    content='@PatoJADOficial'
+    name='twitter:site'/>
+  <meta
+    content='@PatoJADOficial'
+    name='twitter:creator'/>
+  <meta
+    property="og:url"
+    content="https://ytplayer.patojad.com.ar/" />
+  <meta
+    property="og:image"
+    content="https://i.postimg.cc/Yqq5CTcx/photo-2019-11-26-14-40-25.jpg" />
+  <meta
+    property="og:locale"
+    content="es-ES" />
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link
+    rel="icon"
+    type="image/x-icon"
+    href="favicon.ico" />
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons" />
