--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8" />
   <title>YTPlayer | PatoJAD</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
-    content='Youtube, YTPlayer, Musica, PatoJAD'
+    name="viewport"
+    content="width=device-width, initial-scale=1" />
+  <meta
+    content='youtube, ytplayer, musica, patojad, reproductor, video, online, sin, publicidad, listas, colas, playlist, gratis, free, no ads'
     name='keywords' />
   <meta name="author" content="PatoJAD" />
   <meta
