--- a/src/index.html
+++ b/src/index.html
@@ -5,40 +5,37 @@
   <meta charset="utf-8" />
   <title>YTPlayer | PatoJAD</title>
 
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
     content='youtube, ytplayer, musica, patojad, reproductor, video, online, sin, publicidad, listas, colas, playlist, gratis, free, no ads'
     name='keywords' />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="robots" content="index, follow" />
   <meta name="author" content="PatoJAD" />
-  <meta
-  name="description"
-  content="YTPlayer es un reproductor online que nos permite escuchar musica desde youtube de una forma mas comoda"
-  property="og:description" />
-  <meta
-    content='@PatoJADOficial'
-    name='twitter:site'/>
-  <meta
-    content='@PatoJADOficial'
-    name='twitter:creator'/>
-  <meta
-    property="og:url"
-    content="https://ytplayer.patojad.com.ar/" />
-  <meta
-    property="og:image"
-    content="https://i.postimg.cc/Yqq5CTcx/photo-2019-11-26-14-40-25.jpg" />
-  <meta
-    property="og:locale"
-    content="es-ES" />
+  <meta name="description"
+    content="YTPlayer es un reproductor online que nos permite escuchar musica desde youtube de una forma mas comoda"
+    property="og:description" />
+  <meta content='@PatoJADOficial' name='twitter:site' />
+  <meta content='@PatoJADOficial' name='twitter:creator' />
+  <meta property="og:url" content="https://ytplayer.patojad.com.ar/" />
+  <meta property="og:image" content="https://i.postimg.cc/Yqq5CTcx/photo-2019-11-26-14-40-25.jpg" />
+  <meta property="og:locale" content="es-ES" />
 
-  <link
-    rel="icon"
-    type="image/x-icon"
-    href="favicon.ico" />
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
+  <link href="https://fonts.googleapis.com/css?family=Poppins:700" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css"
+    integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://patojad.com.ar/css/animate.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
+  <link href="https://patojad.com.ar/css/vars.css" rel="stylesheet" />
+  <link href="https://patojad.com.ar/css/theme.css" rel="stylesheet" />
+  <link href="https://patojad.com.ar/css/style.css" rel="stylesheet" />
+  <link href="https://patojad.com.ar/css/post.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -47,11 +44,21 @@
       <div class="loading"></div>
     </div>
   </app>
-  <script
-    data-ad-client="ca-pub-2459752565912421"
-    async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+  <script src="https://patojad.com.ar/js/dark-theme.js" type="text/javascript">
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
+    type="text/javascript">
+    </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js" type="text/javascript">
+  </script>
+  <script src="https://patojad.com.ar/js/wow.min.js" type="text/javascript">
+  </script>
+  <script src="https://patojad.com.ar/js/theme.js" type="text/javascript">
+  </script>
+  <script data-ad-client="ca-pub-2459752565912421" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+    </script>
 </body>
 
 </html>
