--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -30,7 +30,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css"
     integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://patojad.com.ar/css/animate.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css" />
   <link href="https://patojad.com.ar/css/vars.css" rel="stylesheet" />
   <link href="https://patojad.com.ar/css/theme.css" rel="stylesheet" />
   <link href="https://patojad.com.ar/css/style.css" rel="stylesheet" />
@@ -47,8 +46,6 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"
     type="text/javascript">
     </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js" type="text/javascript">
-  </script>
   <script data-ad-client="ca-pub-2459752565912421" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
     </script>
